<resources>
    <string name="app_name">Digital Doctor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="liability">Liability Warning</string>
    <string name="liability_error">Error: cannot show Liability Warning.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_error">Error: cannot show Terms and Conditions.</string>
    <string name="back_button">Back</string>
    <string name="restart_button">Restart</string>
    <string name="settings_button">Settings</string>
    <string name="digital_doctor_logo">The logo for this application, Digital Doctor</string>
    <string name="agree">I Agree</string>
    <string name="initial_search_prompt">Which of these categories best describes your problem?</string>
    <string name="initial_search_directive">Select Problem Category</string>
    <string name="primary_symptom_location_prompt">Where is your primary symptom located?</string>
    <string name="primary_symptom_location_directive">Select Symptom Location</string>
    <string name="primary_symptom_identification_prompt">What is your primary symptom?</string>
    <string name="primary_symptom_identification_directive">Select Symptom</string>
    <string name="time_period_prompt">When is this happening?</string>
    <string name="time_period_directive">Select Time Period</string>
    <string name="general_problem_prompt">What is the main problem?</string>
    <string name="general_problem_directive">Select Appropriate Category</string>
    <string name="extra_info_prompt">Please provide extra information.</string>
    <string name="extra_info_directive">Select Most Similar Category</string>
    <string name="body_part_specific">Body-Part Specific Symptoms</string>
    <string name="generalized_symptoms">Generalized (Whole Body) Symptoms</string>
    <string name="pregnancy_symptoms">Pregnancy Symptoms</string>
    <string name="childhood_symptoms">Common Childhood Symptoms</string>
    <string name="error_emergency">No Status Found</string>
    <string name="error_name">No Name Found</string>
    <string name="error_text">No Text to Display</string>
    <string name="maps_button">Nearby Emergency Rooms</string>
    <string name="emergency">emergency</string>
    <string name="caution">caution</string>
    <string name="not_an_emergency">not an emergency</string>
    <string name="emergency_icon">This icon displays an icon signifying the situation\'s level of urgency</string>
    <string name="book_name">Your Body\'s Red Light Warning Signals</string>
    <string name="book_image">A picture of the book Your Body\'s Red Light Warning Signals by Dr. Neil Shulman</string>
    <string name="amazon_image">An image of the Amazon company logo.</string>
    <string name="buy_text"><a href='https://www.amazon.com/Bodys-Light-Warning-Signals-revised/dp/0440245133'>Buy NOW at Amazon</a></string>
    <string name="emergency_button">I know this is an Emergency</string>
    <string name="book_info">This potentially lifesaving guide, newly revised and updated, gives you instant access to the information you need to spot a serious medical condition before it\'s too late.</string>
</resources>
