<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_content_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ScrollView
            android:id="@+id/ScrollViewBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/book_img"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/book_image"
                    app:layout_constraintBottom_toTopOf="@id/link"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:srcCompat="@drawable/book_frontpage" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/book_info"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/link"
                    app:layout_constraintVertical_bias="0.081" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/book_name"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toTopOf="@+id/book_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/buy_text"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textColorLink="@android:color/holo_blue_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/book_img" />

                <ImageView
                    android:id="@+id/amazon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/amazon_image"
                    app:layout_constraintEnd_toStartOf="@+id/link"
                    app:layout_constraintTop_toBottomOf="@id/book_img"
                    app:srcCompat="@drawable/amazon" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>